deploy/catalog-db/base/overlays/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalog-db
spec:
  host: catalog-db
  subsets:
  - name: v1
    labels:
      version: v1
