deploy/catalog-db/base/overlays/service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-db
spec:
  hosts:
  - catalog-db
  http:
  - route:
    - destination:
        host: catalog-db
        subset: v1
